cabal-version:       >=1.10

name:                sm-breakout
version:             0.1
-- synopsis:
-- description:
-- bug-reports:
-- GPLv3+
license:             GPL-3
-- license-file:        LICENSE
author:              Simon Michael
maintainer:          simon@joyful.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable sm-breakout
  default-language:  Haskell2010
  main-is:           breakout.hs
  other-modules:
    Game
    Bat
    Ball
    Draw
    Types
    Util
    Import

  -- other-extensions:
  build-depends:
       base >=4.14 && <4.15
      ,random >=1.0 && <1.2
      ,sdl2 >=2.5 && <2.6
      ,sdl2-gfx >=0.2 && <0.3
      ,sdl2-image >=2.0 && <2.1
      ,text
