cabal-version:       >=1.10

name:                sm-breakout
version:             0.1
synopsis:            A Breakout prototype, for exploring haskell game dev
-- description:
-- bug-reports:
-- GPLv3+
license:             GPL-3
-- license-file:        LICENSE
author:              Simon Michael
maintainer:          simon@joyful.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:
  README.md
  CHANGELOG.md
  data/good-times.ttf
  data/paddle.wav
  data/hit.wav
  data/wall.wav
  data/Kick-Drum-1.wav

executable sm-breakout
  default-language:  Haskell2010
  main-is:           breakout.hs
  other-modules:
    Game
    Bat
    Ball
    Brick
    Graphics
    Sound
    Constants
    Util

  -- other-extensions:
  build-depends:
       base >=4.14 && <4.15
      ,directory
      ,filepath
      ,file-embed >=0.0.13 && <0.14
      ,optparse-simple >=0.1 && <0.2
      ,pretty-simple >=4 && <4.1
      ,random >=1.0 && <1.2
      ,safe >=0.3 && <0.4
      ,sdl2 >=2.5 && <2.6
      ,sdl2-gfx >=0.2 && <0.3
      ,sdl2-image >=2.0 && <2.1
      ,sdl2-mixer >=1.1.0 && <1.2
      ,sdl2-ttf >=2.1.1 && <2.2
      ,text
      ,time
      ,tini >=0.1.0.1 && <0.2
